# sifis-xacml

./: .gitignore  Cargo.toml  README.md
data/: app_label.json  request.xml
src/: main.rs
templates/: request.xml
